test/libsolidity/syntaxTests/parsing/new_invalid_type_name.sol
contract C {
	function f() {
		new var;
	}
}
// ----
// ParserError: (35-35): Expected explicit type name.
